Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,39 @@
 trigger:
-- main
+  - main  # or your branch name
 
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-- task: DownloadSecureFile@1
-  name: GetAzureCredentials
+variables:
+  imageName: 'clarawebapp'
 
-- task: AzureCLI@2
+steps:
+- task: Docker@2
+  displayName: 'Build Docker image'
   inputs:
-    azureSubscription: '<your-service-connection-name>'
-    scriptType: bash
-    scriptLocation: inlineScript
-    inlineScript: |
-      az storage blob upload-batch -s . -d '$web' --account-name <your-storage-account-name> --overwrite
+    command: build
+    repository: $(imageName)
+    Dockerfile: '**/Dockerfile'
+    tags: |
+      latest
+
+- task: Docker@2
+  displayName: 'Push image to ACR'
+  inputs:
+    command: push
+    repository: $(imageName)
+    tags: |
+      latest
+    containerRegistry: 'YOUR_ACR_SERVICE_CONNECTION_NAME'
+
+- task: Kubernetes@1
+  displayName: 'Deploy to AKS'
+  inputs:
+    connectionType: 'Azure Resource Manager'
+    azureSubscription: 'YOUR_AZURE_SUBSCRIPTION_NAME'
+    azureResourceGroup: 'YOUR_RESOURCE_GROUP'
+    kubernetesCluster: 'YOUR_CLUSTER_NAME'
+    namespace: 'default'
+    command: 'apply'
+    useConfigurationFile: true
+    configuration: 'k8s/deployment.yaml'
